# crdt-sqlite

./: .gitignore  CMakeLists.txt  Package.swift  README-Swift.md  README.md  SWIFT_FAQ.md  crdt_sqlite.cpp  crdt_sqlite.hpp  crdt_types.hpp
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
Sources/CRDTSQLite/: CRDTSQLite.swift  Change.swift  Errors.swift  RecordID.swift  SQLiteValue.swift
Sources/CRDTSQLite/Internal/: CRDTSQLite+Private.swift  CallbackBridge.swift  SQLiteHelpers.swift
Tests/CRDTSQLiteTests/: CRDTSQLiteTests.swift
docs/: SWIFT_FAQ.md  SWIFT_IMPLEMENTATION.md  cpp-api.md  swift-api.md
